# egocolo-channel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
script/: upsert-youtube.py
src/author_config/: 20220618-day1.yaml  20220626-day1.yaml  20220627-day2.yaml  20220628-day3.yaml  20220629-day4.yaml  20220630-day5.yaml  20220701-day6.yaml  20220702-day7.yaml  20220703-day8.yaml  20220704-day9.yaml  20220705-day10.yaml  20220706-day11.yaml  20220707-day12.yaml  20220708-day13.yaml  20220710-day14.yaml  20220711-day15.yaml  20220712-day16.yaml  20220714-day17.yaml
src/sounds/: とある日常.mp3.metadata.txt  日曜の午後.mp3.metadata.txt
youtube_texts/: channel_description.txt
